--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<div class="nav-bar">
 
 								<ul>
-
+									<!-- <li class="menu-item-has-children"><a href="index.html">Home</a> -->
 								<li class="menu-item-has-children"><a href="JavaScript:void(0)">Pages</a>
 
 																		<ul class="sub-menu">
@@ -191,9 +191,9 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Our Events</a></li>
+											<li><a href="events.html">Upcoming Events</a></li>
 
-											<li><a href="event-detail.html">Event Detail</a></li>
+											<li><a href="event-detail.html">Event Details</a></li>
 
 										</ul>
 
@@ -209,83 +209,7 @@
 
 							</div>
 
-							<!-- <div class="donation">
-
-								<a href="JavaScript:void(0)" class="pr-cart">
-
-									<svg id="Shoping-bags" enable-background="new 0 0 512 512" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><g><path d="m452 120h-60.946c-7.945-67.478-65.477-120-135.054-120s-127.109 52.522-135.054 120h-60.946c-11.046 0-20 8.954-20 20v352c0 11.046 8.954 20 20 20h392c11.046 0 20-8.954 20-20v-352c0-11.046-8.954-20-20-20zm-196-80c47.484 0 87.019 34.655 94.659 80h-189.318c7.64-45.345 47.175-80 94.659-80zm176 432h-352v-312h40v60c0 11.046 8.954 20 20 20s20-8.954 20-20v-60h192v60c0 11.046 8.954 20 20 20s20-8.954 20-20v-60h40z"/></g></svg>
-
-
-
-								</a>
-
-								<div class="cart-popup">
-
-										<ul>
-
-											<li class="d-flex align-items-center position-relative">
-
-												<div class="p-img light-bg">
-
-													<img src="assets/images/p-1.webp" alt="Product Image">
-
-												</div>
-
-												<div class="p-data">
-
-													<h3 class="font-semi-bold">Pastoral Principles Cards</h3>
-
-													<p class="theme-clr font-semi-bold">1 x $25.00</p>
-
-												</div>
-
-												<a href="JavaScript:void(0)" id="crosss"></a>
-
-											</li>
-
-											<li class="d-flex align-items-center position-relative">
-
-												<div class="p-img light-bg">
-
-													<img src="assets/images/p-1.webp" alt="Product Image">
-
-												</div>
-
-												<div class="p-data">
-
-													<h3 class="font-semi-bold">Pastoral Principles Cards</h3>
-
-													<p class="theme-clr font-semi-bold">1 x $25.00</p>
-
-												</div>
-
-												<a href="JavaScript:void(0)" id="cross"></a>
-
-											</li>
-
-										</ul>
-
-											<div class="cart-total d-flex align-items-center justify-content-between">
-
-												<span class="font-semi-bold">Total:</span>
-
-												<span class="font-semi-bold">$60.00</span>
-
-											</div>
-
-											<div class="cart-btns d-flex align-items-center justify-content-between">
-
-												<a class="font-bold" href="JavaScript:void">View Cart</a>
-
-												<a class="font-bold theme-bg-clr text-white checkout" href="JavaScript:void">Checkout</a>
-
-											</div>
-
-								</div>
-
-								<a href="JavaScript:void(0)" class="theme-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Give Now</a>
-
-							</div> -->
+							
 
 							<div id="nav-icon4">
 
@@ -321,23 +245,7 @@
 
 			<ul>
 
-									<li class="menu-item-has-children">
-
-										<a href="JavaScript:void(0)">Home</a>
-
-
-
-										<ul class="sub-menu">
-
-											<li><a href="index.html">HomeOne</a></li>
-
-											<li><a href="index-two.html">Home Two</a></li>
-
-											<li><a href="index-three.html">Home Three</a></li>
-
-										</ul>
-
-									</li>
+									
 
 									<li class="menu-item-has-children"><a href="JavaScript:void(0)">Sermons</a>
 
@@ -355,9 +263,9 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Our Events</a></li>
+											<li><a href="events.html">Upcoming Events</a></li>
 
-											<li><a href="event-detail.html">Event Detail</a></li>
+											<li><a href="event-detail.html">Event Details</a></li>
 
 										</ul>
 
@@ -376,15 +284,15 @@
 		<li><a href="blog-detail.html">Blog Detail</a></li>
 	</ul>
 </li>
-											<li><a href="404.html">404 Page</a></li>
+											<!-- <li><a href="404.html">404 Page</a></li> -->
 											<li><a href="about-us.html">About</a></li>
 
 											<li><a href="our-ministries.html">Our Ministries</a></li>
 
 											<li><a href="pastor-detail.html">Pastor Detail</a></li>
 
-											<li><a href="cause-detail.html">Cause Detail</a></li>
-											<li><a href="donation-page.html">Donate Now</a></li>
+											<!-- <li><a href="cause-detail.html">Cause Detail</a></li> -->
+											<!-- <li><a href="donation-page.html">Donate Now</a></li> -->
 											<li><a href="shop.html">Our Products</a></li>
 											<li><a href="product-detail.html">Product Detail</a></li>
 
@@ -410,8 +318,8 @@
 				<div>
 					<img src="assets/images/hero-img-3.webp" alt="hero-one-slider">
 					<div class="hero-data text-center">
-						<h1>Worship That<br> is Pleasing to God</h1>
-						<p>God has given us power and authority.</p>
+						<h1>Raising <br>Leaders That <br>Transform Society.</h1>
+						<p></p>
 					</div>
 				</div>
 				<div>
