Remove .DS_Store and update .gitignore

--- a/our-ministries.html
+++ b/our-ministries.html
@@ -237,7 +237,7 @@
 			<ul>
 
 									
-
+				<li class="menu-item-has-children"><a href="index.html">Home</a>
 									<li class="menu-item-has-children"><a href="JavaScript:void(0)">Sermons</a>
 
 										<ul class="sub-menu">
