--- a/blog-detail.html
+++ b/blog-detail.html
@@ -230,7 +230,7 @@
 
 			<ul>
 
-									
+				<li class="menu-item-has-children"><a href="index.html">Home</a>
 
 									<li class="menu-item-has-children"><a href="JavaScript:void(0)">Sermons</a>
 
