--- a/contact-us.html
+++ b/contact-us.html
@@ -232,7 +232,7 @@
 			<ul>
 
 									
-
+				<li class="menu-item-has-children"><a href="index.html">Home</a>
 									<li class="menu-item-has-children"><a href="JavaScript:void(0)">Sermons</a>
 
 										<ul class="sub-menu">
