Descriptive commit message

--- a/contact-us.html
+++ b/contact-us.html
@@ -353,7 +353,7 @@
 
 								<li>Dominion City Mega Auditorium, off NTA Road, Behind New State, Asaba, Delta State, Nigeria</li>
 
-								<li><span>Telephone:</span>0701 882 0520</li>
+								<a href="tel:+2347018820520"><li><span>Telephone:</span>0701 882 0520</li></a>
 
 								
 
@@ -521,7 +521,7 @@
 
 					<div class="footer-contact">
 
-						<p class="text-white"><span class="theme-clr">Telephone:</span> 0701 882 0520</p>
+						<a href="tel:+2347018820520"><p class="text-white"><span class="">Tel:</span> 07018820520</p></a>
 						<p class="text-white"><span class="theme-clr">Email</span> dominioncityasabaheadquaters@gmail.com</p>
 
 						
