Descriptive commit message

--- a/about-us.html
+++ b/about-us.html
@@ -698,9 +698,9 @@
         <div class="heading">
           <img class="dcLogo2" src="assets/images/heading-img.webp" alt="Heading Image" />
 
-          <p>Scandoulous Things Jesus did in his Ministry</p>
+          <p>Raising Leaders That Transforms Society</p>
 
-          <h2>Meet our Pastor</h2>
+          <h2>Meet our Pastors</h2>
         </div>
 
         <div class="row margin">
@@ -836,87 +836,7 @@
     <section class="gap no-top circle-slider">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="c-slider">
-              <div>
-                <h2 class="font-bold">Decisions Based on Church Reviews1</h2>
-
-                <p>
-                  “ I moved to Quincy last year and was searching for a church
-                  home. The people here are always smiling and friendly. Pastor
-                  Taylor is kind and always positive. I've been going to this
-                  church for almost a year now and I look forward to going each
-                  Sunday. ”
-                </p>
-
-                <ul>
-                  <li><h3 class="font-bold">Lataya Carter</h3></li>
-
-                  <li class="d-flex font-bold">
-                    recommends<span class="theme-clr">blesso Church</span>
-                  </li>
-                </ul>
-              </div>
-
-              <div>
-                <h2 class="font-bold">Based on Church Decisions Reviews2</h2>
-
-                <p>
-                  “ Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Morbi convallis nec magna in imperdiet. Morbi condimentum,
-                  justo nec posuere dictum, velit nisl rhoncus urna, pretium
-                  ultricies neque ante sit amet turpis. Cras malesuada. ”
-                </p>
-
-                <ul>
-                  <li><h3 class="font-bold">William</h3></li>
-
-                  <li class="d-flex font-bold">
-                    recommends<span class="theme-clr">blesso Church</span>
-                  </li>
-                </ul>
-              </div>
-
-              <div>
-                <h2 class="font-bold">Church Decisions Based on Reviews3</h2>
-
-                <p>
-                  “ I moved to Quincy last year and was searching for a church
-                  home. The people here are always smiling and friendly. Pastor
-                  Taylor is kind and always positive. I've been going to this
-                  church for almost a year now and I look forward to going each
-                  Sunday. ”
-                </p>
-
-                <ul>
-                  <li><h3 class="font-bold">Mr. John</h3></li>
-
-                  <li class="d-flex font-bold">
-                    recommends<span class="theme-clr">blesso Church</span>
-                  </li>
-                </ul>
-              </div>
-
-              <div>
-                <h2 class="font-bold">On Church Decisions Based Reviews4</h2>
-
-                <p>
-                  “ c dictum, ex et porttitor sagittis, lorem turpis pharetra
-                  augue, vel maximus enim dui id dui. Praesent fermentum dapibus
-                  elit, gravida elementum sapien accumsan sed. Sed pretium quis
-                  eros fermentum placerat. Donec imperdiet sceler ”
-                </p>
-
-                <ul>
-                  <li><h3 class="font-bold">Julee</h3></li>
-
-                  <li class="d-flex font-bold">
-                    recommends<span class="theme-clr">blesso Church</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
+          <!--  -->
 
           <div class="col-lg-6">
             <div class="nav-c-slider">
@@ -964,92 +884,6 @@
     <!-- Circle Slider Start -->
 
     <!-- Sponsors Start -->
-
-    <div class="gap no-top sponsors">
-      <div class="container">
-        <div class="sponsors-slider">
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-1.webp"
-              alt="Sponsor Image 1"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-2.webp"
-              alt="Sponsor Image 2"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-3.webp"
-              alt="Sponsor Image 3"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-4.webp"
-              alt="Sponsor Image 4"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-5.webp"
-              alt="Sponsor Image 5"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-1.webp"
-              alt="Sponsor Image 6"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-2.webp"
-              alt="Sponsor Image 7"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-3.webp"
-              alt="Sponsor Image 8"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-4.webp"
-              alt="Sponsor Image 9"
-            />
-          </div>
-
-          <div>
-            <img
-              class="img-fluid"
-              src="assets/images/sponsor-img-5.webp"
-              alt="Sponsor Image 10"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- Sponsors End -->
 
@@ -1105,7 +939,7 @@
   
             <div class="footer-contact">
   
-              <p class="text-white"><span class="theme-clr">Telephone:</span> 0701 882 0520</p>
+              <a href="tel:+2347018820520"><p class="text-white"><span class="">Tel:</span> 07018820520</p></a>
               <p class="text-white"><span class="theme-clr">Email</span> dominioncityasabaheadquaters@gmail.com</p>
   
               
@@ -1192,7 +1026,7 @@
   
               <li><a href="assets/images/facebook.svg"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
   
-              <li><a href="https://www.youtube.com/@DominionCity"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
+              <li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
   
               <li><a href="https://www.instagram.com/dominioncityasaba/"><img src="assets/images/instagram.svg" alt="instagram"></a></li>
   
