--- a/contact-us.html
+++ b/contact-us.html
@@ -97,7 +97,7 @@
 
 							<li><a href="https://www.facebook.com/DCasaba/"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
 
-							<li><a href="https://www.youtube.com/@DominionCity"><img src="assets/images/twitter.svg" alt="twitter"></a></li>
+							<li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="twitter"></a></li>
 
 							<li><a href="https://www.instagram.com/dominioncityasaba/"><img src="assets/images/instagram.svg" alt="instagram"></a></li>
 
@@ -608,7 +608,7 @@
 
 						<li><a href="assets/images/facebook.svg"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
 
-						<li><a href="https://www.youtube.com/@DominionCity"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
+						<li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
 
 						<li><a href="https://www.instagram.com/dominioncityasaba/"><img src="assets/images/instagram.svg" alt="instagram"></a></li>
 
