--- a/shop.html
+++ b/shop.html
@@ -101,7 +101,7 @@
 
 							<li><a href="https://www.facebook.com/DCasaba/"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
 
-							<li><a href="https://www.youtube.com/@DominionCity"><img src="assets/images/twitter.svg" alt="twitter"></a></li>
+							<li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="twitter"></a></li>
 
 							<li><a href="https://www.instagram.com/dominioncityasaba/"><img src="assets/images/instagram.svg" alt="instagram"></a></li>
 
@@ -619,7 +619,7 @@
 
 					<div class="footer-contact">
 
-						<p class="text-white"><span class="theme-clr">Telephone:</span> 0701 882 0520</p>
+						<a href="tel:+2347018820520"><p class="text-white"><span class="">Tel:</span> 07018820520</p></a>
 						<p class="text-white"><span class="theme-clr">Email</span> dominioncityasabaheadquaters@gmail.com</p>
 
 						
@@ -706,7 +706,7 @@
 
 						<li><a href="assets/images/facebook.svg"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
 
-						<li><a href="https://www.youtube.com/@DominionCity"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
+						<li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
 
 						<li><a href="https://www.instagram.com/dominioncityasaba/"><img src="assets/images/instagram.svg" alt="instagram"></a></li>
 
