--- a/index.html
+++ b/index.html
@@ -148,17 +148,20 @@
                 <div class="nav-bar">
                   <ul>
                     <li class="menu-item-has-children">
+                      <a href="index.html">Home</a>
+                    </li>
+                    <li class="menu-item-has-children">
                       <a href="JavaScript:void(0)">Pages</a>
 
                       <ul class="sub-menu">
                         <!-- Third Level Menu Html Code -->
-                        <li class="menu-item-has-children">
+                        <!-- <li class="menu-item-has-children">
                           <a href="JavaScript:void(0)">Blog</a>
                           <ul class="sub-menu">
                             <li><a href="blog.html">Our Blog</a></li>
                             <li><a href="blog-detail.html">Blog Detail</a></li>
                           </ul>
-                        </li>
+                        </li> -->
 
                         <li><a href="about-us.html">About</a></li>
 
@@ -166,12 +169,12 @@
                           <a href="our-ministries.html">Our Ministries</a>
                         </li>
 
-                        <li><a href="pastor-detail.html">Pastor Detail</a></li>
+                        <!-- <li><a href="pastor-detail.html">Pastor Detail</a></li>
 
                         <li><a href="shop.html">Our Products</a></li>
                         <li>
                           <a href="product-detail.html">Product Detail</a>
-                        </li>
+                        </li> -->
                       </ul>
                     </li>
 
@@ -220,6 +223,8 @@
         </div>
 
         <ul>
+          <li class="menu-item-has-children"><a href="index.html">Home</a></li>
+
           <li class="menu-item-has-children">
             <a href="JavaScript:void(0)">Sermons</a>
 
@@ -245,24 +250,24 @@
 
             <ul class="sub-menu">
               <!-- Third Level Menu Html Code -->
-              <li class="menu-item-has-children">
+              <!-- <li class="menu-item-has-children">
                 <a href="JavaScript:void(0)">Blog</a>
                 <ul class="sub-menu">
                   <li><a href="blog.html">Our Blog</a></li>
                   <li><a href="blog-detail.html">Blog Detail</a></li>
                 </ul>
-              </li>
+              </li> -->
               <!-- <li><a href="404.html">404 Page</a></li> -->
               <li><a href="about-us.html">About</a></li>
 
               <li><a href="our-ministries.html">Our Ministries</a></li>
 
-              <li><a href="pastor-detail.html">Pastor Detail</a></li>
+              <!-- <li><a href="pastor-detail.html">Pastor Detail</a></li> -->
 
               <!-- <li><a href="cause-detail.html">Cause Detail</a></li> -->
               <!-- <li><a href="donation-page.html">Donate Now</a></li> -->
-              <li><a href="shop.html">Our Products</a></li>
-              <li><a href="product-detail.html">Product Detail</a></li>
+              <!-- <li><a href="shop.html">Our Products</a></li>
+              <li><a href="product-detail.html">Product Detail</a></li> -->
             </ul>
           </li>
 
@@ -1086,7 +1091,7 @@
 
 
 
-    <section class="gap blog">
+    <!-- <section class="gap blog">
       <div class="container">
         <div class="heading">
           <img
@@ -1095,7 +1100,7 @@
             alt="Heading Image 5"
           />
 
-          <!-- <p>Scandoulous Things Jesus did in his Ministry</p> -->
+          
 
           <h2>Recent Articles</h2>
         </div>
@@ -1208,13 +1213,13 @@
           <a href="blog.html" class="theme-btn">View All Posts</a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Blog End -->
 
     <!-- Sponsors Start -->
 
-    <div class="gap no-top sponsors">
+    <!-- <div class="gap no-top sponsors">
       <div class="container">
         <div class="sponsors-slider">
           <div>
@@ -1298,11 +1303,16 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Sponsors End -->
 
     <!-- Subscribe Start -->
+<br>
+<br>
+<br>
+<br>
+<br>
 
     <section class="subscribe">
       <div class="container">
@@ -1377,7 +1387,7 @@
 
 						<li><a href="contact.html">Contact Us</a></li>
 
-						<li><a href="pastor-detail.html">State Pastor</a></li>
+						<!-- <li><a href="pastor-detail.html">State Pastor</a></li> -->
 
 						
 
