changed contact us

--- a/about-us.html
+++ b/about-us.html
@@ -843,7 +843,7 @@ He is a Management and Government Consultant who speaks nationally and internati
 
     <!-- Circle Slider Start -->
 
-    <section class="gap no-top circle-slider">
+    <section id="pastorSlider" class="gap no-top circle-slider">
       <div class="container">
         <div class="row align-items-center">
           <!--  -->
