--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 		
 
 	</div>
-    <section class="gap no-bottom live-stream">
+    <section id="liveStream" class="gap no-bottom live-stream">
 		
       <div class="container">
         <div class="heading">
@@ -764,10 +764,10 @@
 
     </section>
 
-    <section class="gap events-carousal">
+    <!-- <section class="gap events-carousal">
       <div class="container">
         <div class="heading">
-          <!-- <p>We enjoy being a multi-denominational church</p> -->
+       
 
           <h2>Don’t Miss Your Chance to Get Closer to God</h2>
         </div>
@@ -1048,7 +1048,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Events Carousal End -->
 
@@ -1059,6 +1059,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <img
+            id="tele"
               class="img-fluid sideimage"
               src="assets/images/donation-img.webp"
               alt="Donation Image"
