Re-created Sermons and their details

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
           <div class="sermon" data-aos="zoom-in-right" data-aos-duration="1000">
             <div class="sermon-img">
               <div class="sermon-media">
-                <img src="assets/images/sermon-img.webp" alt="Sermon Image" />
+                <img src="assets/images/Sermons/secondService/sermon-img.webp" alt="Sermon Image" />
 
                 <div class="audio-player style2">
                   <audio controls>
@@ -578,7 +578,7 @@
 
               <h3>
                 <a href="sermon-detail.html"
-                  >Keys to pleasing God for Kingdom lifting</a
+                  >Faith For Finances</a
                 >
               </h3>
 
@@ -593,7 +593,7 @@
             <div class="sermon-img">
               <div class="sermon-media">
                 <img
-                  src="assets/images/sermon-img-1.webp"
+                  src="assets/images/Sermons/firstService/sermon-img-1.webp"
                   alt="Sermon Image 1"
                 />
 
@@ -648,13 +648,14 @@
 
               <h3>
                 <a href="sermon-detail.html"
-                  >How to position yourself for Supernatural Explosion.</a
+                  >Inheritance of Sons</a
                 >
               </h3>
 
-              <p>
-                VISION is what you want to achieve and MISSION is how you want to go about it, your denomination is not the body of christ, you can be secure in the plan of God for your life.
-              </p>
+              <p>The reason why we are saved the process of salvaFon is because God desires or wants
+                to raise up people he can call sons. So by the reason of Christ’s coming and dying for us
+                we have become adopted and we share the inheritance of being begoIen sons, just like
+                Jesus Christ.  </p>
             </div>
           </div>
 
@@ -662,7 +663,7 @@
             <div class="sermon-img">
               <div class="sermon-media">
                 <img
-                  src="assets/images/sermon-img-2.webp"
+                  src="assets/images/Sermons/lastweek-secondservice/sermon-img-2.webp"
                   alt="Sermon Image 2"
                 />
 
