--- a/sermon-detail.html
+++ b/sermon-detail.html
@@ -16,7 +16,7 @@
 
 	<!-- Title -->
 
-	<title>Sermon Detail</title>
+	<title>Sermon Details</title>
 
 
 
@@ -302,25 +302,27 @@
 
 					<ul class="meta justify-content-start">
 
-						<li>Jorge karri</li>
+						<li>PST EMEKA</li>
 
-						<li>Nov 19, 2021</li>
+						<li>JUNE 30, 2024</li>
+
+						<li>2ND SERVICE</li>
 
 					</ul>
 
 					<div class="sermon-box d-flex justify-content-between align-items-center">
 
-						<h2 class="w-60">Spiritually Reborn As God’s Children</h2>
+						<h2 class="w-60">Faith For Finances</h2>
 
 						<ul class="sermon-icons d-flex">
 
-							<li><a class="flex-all green-bg rounded-circle s_audio2" href="JavaScript:void(0)"><svg viewBox="-20 0 352 352.137"  xmlns="http://www.w3.org/2000/svg"><path d="m61.753906 352.132812c34.050782-.039062 61.648438-27.632812 61.683594-61.683593v-147.257813c23.082031-35.71875 66.914062-51.996094 107.714844-39.996094 40.796875 11.996094 68.84375 49.40625 68.914062 91.933594 0 3.316406 2.6875 6 6 6 3.316406 0 6-2.683594 6-6 0-107.59375-87.308594-195.128906-194.628906-195.128906-3.3125 0-6 2.6875-6 6v247.949219c-17.214844-23.433594-48.464844-31.65625-74.988281-19.734375-26.519531 11.925781-41.109375 40.757812-35.007813 69.1875 6.101563 28.433594 31.234375 48.742187 60.3125 48.734375zm0 0"/></svg></a></li>
+							<li><a class="flex-all green-bg rounded-circle" href="https://audio.com/solomon-ikenna/audio/naza-ecounter-01"><svg viewBox="-20 0 352 352.137"  xmlns="http://www.w3.org/2000/svg"><path d="m61.753906 352.132812c34.050782-.039062 61.648438-27.632812 61.683594-61.683593v-147.257813c23.082031-35.71875 66.914062-51.996094 107.714844-39.996094 40.796875 11.996094 68.84375 49.40625 68.914062 91.933594 0 3.316406 2.6875 6 6 6 3.316406 0 6-2.683594 6-6 0-107.59375-87.308594-195.128906-194.628906-195.128906-3.3125 0-6 2.6875-6 6v247.949219c-17.214844-23.433594-48.464844-31.65625-74.988281-19.734375-26.519531 11.925781-41.109375 40.757812-35.007813 69.1875 6.101563 28.433594 31.234375 48.742187 60.3125 48.734375zm0 0"/></svg></a></li>
 
-							<li><a class="flex-all green-bg rounded-circle s_video2" href="JavaScript:void(0)"><svg id="playgdfg-btn" enable-background="new 0 0 494.942 494.942"  viewBox="0 0 494.942 494.942" xmlns="http://www.w3.org/2000/svg"><path d="m35.353 0 424.236 247.471-424.236 247.471z"/></svg></a></li>
+							<li><a class="flex-all green-bg rounded-circle" href="https://www.youtube.com/@dominioncityasabahq"><svg id="playgdfg-btn" enable-background="new 0 0 494.942 494.942"  viewBox="0 0 494.942 494.942" xmlns="http://www.w3.org/2000/svg"><path d="m35.353 0 424.236 247.471-424.236 247.471z"/></svg></a></li>
 
-							<li><a class="flex-all green-bg rounded-circle s_pdf" href="JavaScript:void(0)"><svg id="bossfsok" enable-background="new 0 0 510 510" viewBox="0 0 510 510" xmlns="http://www.w3.org/2000/svg"><path d="m42.05 368.101v-221.49c-10.958-.432-21.6-.78-31.75-1.091-5.64-.172-10.3 4.353-10.3 9.996v257.99c0 5.314 4.149 9.7 9.456 9.985 52.861 2.848 122.506 5.886 188.124 21.779-48.97-37.74-102.57-54.79-143.29-62.43-7.1-1.329-12.24-7.529-12.24-14.739z"/><path d="m467.95 144.791v223.31c0 7.21-5.14 13.41-12.24 14.74-40.72 7.64-94.32 24.69-143.29 62.43 65.517-15.871 134.984-18.917 188.124-21.78 5.307-.286 9.456-4.671 9.456-9.985v-259.081c0-5.515-4.462-9.992-9.977-10-8.87-.013-19.774.07-32.073.366z"/><path d="m72.05 74.729v281.122c49.59 10.9 113.11 34.67 167.95 86.16v-295.02c-34.8-43.752-99.31-71.63-156.098-82.092-6.162-1.135-11.852 3.564-11.852 9.83zm124.64 229.042c-4.315 7.059-13.546 9.299-20.62 4.98-8.11-4.95-28.87-16.78-46.66-19.79-8.17-1.38-13.67-9.12-12.29-17.29s9.12-13.67 17.29-12.29c22.11 3.73 45.39 16.49 57.29 23.77 7.07 4.32 9.3 13.55 4.99 20.62zm.34-94.83c-4.732 6.798-14.104 8.454-20.88 3.73-9.77-6.8-27.87-15.88-46.74-19.07-8.17-1.38-13.67-9.12-12.29-17.29s9.12-13.67 17.29-12.29c23.74 4.01 45.99 15.05 58.89 24.04 6.8 4.73 8.47 14.08 3.73 20.88z"/><path d="m426.099 64.9c-56.513 10.423-121.33 38.251-156.099 82.091v295.02c54.84-51.49 118.36-75.26 167.95-86.16v-281.12c0-6.266-5.69-10.967-11.851-9.831zm-45.509 224.061c-17.79 3.01-38.55 14.84-46.66 19.79-7.075 4.32-16.306 2.077-20.62-4.98-4.31-7.07-2.08-16.3 4.99-20.62 11.9-7.28 35.18-20.04 57.29-23.77 8.17-1.39 15.91 4.12 17.29 12.29s-4.12 15.91-12.29 17.29zm0-95.36c-18.87 3.19-36.97 12.27-46.74 19.07-6.77 4.72-16.143 3.074-20.88-3.73-4.74-6.8-3.07-16.15 3.73-20.88 12.9-8.99 35.15-20.03 58.89-24.04 8.17-1.39 15.91 4.12 17.29 12.29s-4.12 15.91-12.29 17.29z"/></svg></a></li>
+							<li><a class="flex-all green-bg rounded-circle" href="./assets/pdfs/secondservice.pdf"><svg id="bossfsok" enable-background="new 0 0 510 510" viewBox="0 0 510 510" xmlns="http://www.w3.org/2000/svg"><path d="m42.05 368.101v-221.49c-10.958-.432-21.6-.78-31.75-1.091-5.64-.172-10.3 4.353-10.3 9.996v257.99c0 5.314 4.149 9.7 9.456 9.985 52.861 2.848 122.506 5.886 188.124 21.779-48.97-37.74-102.57-54.79-143.29-62.43-7.1-1.329-12.24-7.529-12.24-14.739z"/><path d="m467.95 144.791v223.31c0 7.21-5.14 13.41-12.24 14.74-40.72 7.64-94.32 24.69-143.29 62.43 65.517-15.871 134.984-18.917 188.124-21.78 5.307-.286 9.456-4.671 9.456-9.985v-259.081c0-5.515-4.462-9.992-9.977-10-8.87-.013-19.774.07-32.073.366z"/><path d="m72.05 74.729v281.122c49.59 10.9 113.11 34.67 167.95 86.16v-295.02c-34.8-43.752-99.31-71.63-156.098-82.092-6.162-1.135-11.852 3.564-11.852 9.83zm124.64 229.042c-4.315 7.059-13.546 9.299-20.62 4.98-8.11-4.95-28.87-16.78-46.66-19.79-8.17-1.38-13.67-9.12-12.29-17.29s9.12-13.67 17.29-12.29c22.11 3.73 45.39 16.49 57.29 23.77 7.07 4.32 9.3 13.55 4.99 20.62zm.34-94.83c-4.732 6.798-14.104 8.454-20.88 3.73-9.77-6.8-27.87-15.88-46.74-19.07-8.17-1.38-13.67-9.12-12.29-17.29s9.12-13.67 17.29-12.29c23.74 4.01 45.99 15.05 58.89 24.04 6.8 4.73 8.47 14.08 3.73 20.88z"/><path d="m426.099 64.9c-56.513 10.423-121.33 38.251-156.099 82.091v295.02c54.84-51.49 118.36-75.26 167.95-86.16v-281.12c0-6.266-5.69-10.967-11.851-9.831zm-45.509 224.061c-17.79 3.01-38.55 14.84-46.66 19.79-7.075 4.32-16.306 2.077-20.62-4.98-4.31-7.07-2.08-16.3 4.99-20.62 11.9-7.28 35.18-20.04 57.29-23.77 8.17-1.39 15.91 4.12 17.29 12.29s-4.12 15.91-12.29 17.29zm0-95.36c-18.87 3.19-36.97 12.27-46.74 19.07-6.77 4.72-16.143 3.074-20.88-3.73-4.74-6.8-3.07-16.15 3.73-20.88 12.9-8.99 35.15-20.03 58.89-24.04 8.17-1.39 15.91 4.12 17.29 12.29s-4.12 15.91-12.29 17.29z"/></svg></a></li>
 
-							<li><a class="flex-all green-bg rounded-circle s_music" href="JavaScript:void(0)"><svg version="1.1" id="dfgdfgownload" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 488.4 488.4" style="enable-background:new 0 0 488.4 488.4;" xml:space="preserve"> <g> <g> <path d="M483.6,295.25l-69.5-107.4c-5.4-8.3-14.5-13.3-24.4-13.3H359c-4.5,0-7.2,5-4.7,8.7l75,116c1,1.5-0.1,3.5-1.9,3.5h-32.9 h-26.8H342c-3.1,0-5.5,2.5-5.7,5.5c-2.9,48.4-43,86.8-92.2,86.8s-89.3-38.4-92.2-86.8c-0.2-3.1-2.6-5.5-5.7-5.5h-25.7h-23H60.9 c-1.8,0-2.8-2-1.9-3.5l75-116c2.4-3.8-0.3-8.7-4.7-8.7H98.6c-9.9,0-19,5-24.4,13.3L4.8,295.25c-3.1,4.8-4.8,10.5-4.8,16.3v149.6 c0,14.6,11.9,26.5,26.5,26.5h217.7h217.7c14.6,0,26.5-11.9,26.5-26.5v-149.6C488.4,305.75,486.8,300.15,483.6,295.25z"/> <path d="M236.2,299.45c4.1,5.2,12,5.2,16.1,0l65.9-83.8c5.3-6.7,0.5-16.6-8-16.6h-26V40.75c0-22.1-17.9-40-40-40l0,0 c-22.1,0-40,17.9-40,40v158.3h-26c-8.5,0-13.3,9.9-8,16.6L236.2,299.45z"/> </g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> </svg></a></li>
+							<li><a class="flex-all green-bg rounded-circle" href="https://www.instagram.com/dominioncityasaba/"><svg version="1.1" id="dfgdfgownload" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 488.4 488.4" style="enable-background:new 0 0 488.4 488.4;" xml:space="preserve"> <g> <g> <path d="M483.6,295.25l-69.5-107.4c-5.4-8.3-14.5-13.3-24.4-13.3H359c-4.5,0-7.2,5-4.7,8.7l75,116c1,1.5-0.1,3.5-1.9,3.5h-32.9 h-26.8H342c-3.1,0-5.5,2.5-5.7,5.5c-2.9,48.4-43,86.8-92.2,86.8s-89.3-38.4-92.2-86.8c-0.2-3.1-2.6-5.5-5.7-5.5h-25.7h-23H60.9 c-1.8,0-2.8-2-1.9-3.5l75-116c2.4-3.8-0.3-8.7-4.7-8.7H98.6c-9.9,0-19,5-24.4,13.3L4.8,295.25c-3.1,4.8-4.8,10.5-4.8,16.3v149.6 c0,14.6,11.9,26.5,26.5,26.5h217.7h217.7c14.6,0,26.5-11.9,26.5-26.5v-149.6C488.4,305.75,486.8,300.15,483.6,295.25z"/> <path d="M236.2,299.45c4.1,5.2,12,5.2,16.1,0l65.9-83.8c5.3-6.7,0.5-16.6-8-16.6h-26V40.75c0-22.1-17.9-40-40-40l0,0 c-22.1,0-40,17.9-40,40v158.3h-26c-8.5,0-13.3,9.9-8,16.6L236.2,299.45z"/> </g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> </svg></a></li>
 
 						</ul>
 
@@ -330,7 +332,7 @@
 				<div class="sermon-img">
 				<div class="sermon-featured-img sermon-media">
 
-					<img class="img-fluid w-100" src="assets/images/sermon.webp" alt="Sermon">
+					<img class="img-fluid w-100" src="assets/images/Sermons/secondService/sermon-img.webp" alt="Sermon">
 					<video controls>
 
 						<source src="https://winsfolio.net/blesso/assets/videos/video.mp4" type="video/mp4">
@@ -355,10 +357,8 @@
 				</div>
 				</div>
 				<div class="content w-85 m-auto">
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis a aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris ni si ut aliquip ex eu fugiat nulla pariatur sint occaecat cupidatat non proident, sunt in culpa qu dolor in reprehenderit in voluptate velit esse cillum dolore eu f nulla pariatur. Excepteur sint occaecat cupidatat non pr  exercitation ullamco laboris nisi ut aliqu  exercitation ullam oident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-					<p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris ni si ut aliquip ex eu fugiat nulla cepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>All the prophesy of the last days have been fulfilled the only one remaining is for the gospel to reach the ends of the earth, the end will nort come until the is fulfilled, this is the time for apostles in the market place to take the gospel out into the places some pastors cant reach, if we don’t do that we are playing the coming of christ, so you need to be successful most people will not listen unless you are successful, wisdom is justified by result, and in the last days if we must command the gospel the church must be wealthy, the hardship in the society now is a good advantage for a church that is economically empowered, that is what attracts people to the kingdom, the reason why God is interested in financing the church because the time is short, the devil has power but what the devil does not have is good work, without good work the world cant be conquered  and good works  requires money, anytime you make a vow God ensures that he does it for you but he will first allow adversaries he does that to see if you make him priority.</p>
+					<p>God does not make you wealthy for you to chase clout or do big boy but so that all nations can come to him for winning nations for him, You need money, God has the money but he’s looking for faithful labourers, he trains you and show you things before he pumps money to your life because money has power</p>
 
 					<div class="gallery">
 
@@ -368,8 +368,8 @@
 
 								
 								<figure>
-									<img class="img-fluid w-100" src="assets/images/event-gal-1.webp" alt="event-gal-1">
-									<a data-fancybox="gallery" href="assets/images/event-gal-1.webp"><img src="assets/images/plus.svg" alt="Plus"></a>
+									<img class="img-fluid w-100" src="assets/images/Sermons/secondService/event-gal-1.webp" alt="event-gal-1">
+									<a data-fancybox="gallery" href="assets/images/Sermons/secondService/event-gal-1.webp"><img src="assets/images/plus.svg" alt="Plus"></a>
 								</figure>
 
 							</div>
@@ -378,8 +378,8 @@
 
 								
 								<figure>
-									<img class="img-fluid w-100" src="assets/images/event-gal-2.webp" alt="event-gal-2">
-									<a data-fancybox="gallery" href="assets/images/event-gal-2.webp"><img src="assets/images/plus.svg" alt="Plus"></a>
+									<img class="img-fluid w-100" src="assets/images/Sermons/secondService/event-gal-2.webp" alt="event-gal-2">
+									<a data-fancybox="gallery" href="assets/images/Sermons/secondService/event-gal-2.webp"><img src="assets/images/plus.svg" alt="Plus"></a>
 								</figure>
 
 							</div>
@@ -388,25 +388,21 @@
 
 					</div>
 
-					<p>
-
-						sint occaecat cupidatat non proident, sunt in culpa qu dolor in reprehenderit in voluptate velit esse cillum dolore eu nulla pariatur. Excepteur sint occaecat cupidatat non pr  exercitation ullamco laboris nisi ut aliqu  exercitation ullam oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-					</p>
+					<p>You must crucify the god called mammon, when you grow in the kingdom you give so that the glory of God covered the earth as the water covers the sea, that should be your motivation.The way you crucify mammon is by :</p>
 
 					<ul class="church-list">
 
-						<li>Consectetur adipiscing elit vtae elit libero</li>
+						<li>1. By learning and practicing giving</li>
 
-						<li>Nullam id dolor id eget lacinia odio posuere erat a ante</li>
+						<li>2. Sacrifice</li>
 
-						<li>Integer posuere erat dapibus posuere velit</li>
+						<li>3. You must learn Kingdom partnership</li>
 
 					</ul>
 
 				</div>
 
-				<div class="pagination">
+				<!-- <div class="pagination">
 
 						<ul>
 
@@ -416,7 +412,7 @@
 
 						</ul>
 
-					</div>
+					</div> -->
 
 			</div>
 
