--- a/about-us.html
+++ b/about-us.html
@@ -158,7 +158,7 @@
                         <li><a href="about-us.html">About</a></li>
 
                         <li>
-                          <a href="our-ministries.html">Our Ministries</a>
+                          <a href="our-ministries.html">Satellite Churchs</a>
                         </li>
 
                         <!-- <li><a href="pastor-detail.html">Pastor Detail</a></li>
@@ -186,11 +186,11 @@
                       <ul class="sub-menu">
                         <li><a href="events.html">Upcoming Events</a></li>
 
-                        <li><a href="event-detail.html">Event Details</a></li>
+                        <!-- <li><a href="event-detail.html">Event Details</a></li> -->
                       </ul>
                     </li>
 
-                    <li><a href="contact-us.html">Contact</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
                   </ul>
                 </div>
 
@@ -233,7 +233,7 @@
             <ul class="sub-menu">
               <li><a href="events.html">Upcoming Events</a></li>
 
-              <li><a href="event-detail.html">Event Details</a></li>
+              <!-- <li><a href="event-detail.html">Event Details</a></li> -->
             </ul>
           </li>
 
@@ -251,8 +251,8 @@
               </li> -->
               <!-- <li><a href="404.html">404 Page</a></li> -->
               <li><a href="about-us.html">About</a></li>
-
-              <li><a href="our-ministries.html">Our Ministries</a></li>
+              <a href="our-ministries.html">Satellite Churchs</a>
+              <!-- <li><a href="our-ministries.html">Our Ministries</a></li> -->
 
               <!-- <li><a href="pastor-detail.html">Pastor Detail</a></li> -->
 
@@ -263,7 +263,7 @@
             </ul>
           </li>
 
-          <li><a href="contact-us.html">Contact</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
 
         <a href="JavaScript:void(0)" id="res-cross"></a>
@@ -721,7 +721,7 @@ He is a Management and Government Consultant who speaks nationally and internati
               />
 
               <div class="meta green-bg">
-                <a class="font-bold text-white" href="pastor-detail.html"
+                <a class="font-bold text-white" href=""
                   >Dr David Ogbueli</a
                 >
 
@@ -744,7 +744,7 @@ He is a Management and Government Consultant who speaks nationally and internati
 
                     <li>
                       <a
-                        href="https://www.instagram.com/pastordavidogbueli/?igsh=aWtiMjdnamg2eHR3"
+                        href="https://www.instagram.com/pastordavidogbueli/"
                         ><img src="assets/images/instagram.svg" alt="instagram"
                       /></a>
                     </li>
@@ -763,7 +763,7 @@ He is a Management and Government Consultant who speaks nationally and internati
               />
 
               <div class="meta green-bg">
-                <a class="font-bold text-white" href="pastor-detail.html"
+                <a class="font-bold text-white" href=""
                   >Pst Enyioma Onwuchekwa</a
                 >
 
@@ -772,19 +772,19 @@ He is a Management and Government Consultant who speaks nationally and internati
                 <div class="social">
                   <ul class="social-medias">
                     <li>
-                      <a href="JavaScript:void(0)"
+                      <a href="https://www.facebook.com/DCasaba/"
                         ><img src="assets/images/facebook.svg" alt="facebook"
                       /></a>
                     </li>
 
                     <li>
-                      <a href="JavaScript:void(0)"
+                      <a href="https://www.youtube.com/@dominioncityasabahq"
                         ><img src="assets/images/twitter.svg" alt="twitter"
                       /></a>
                     </li>
 
                     <li>
-                      <a href="JavaScript:void(0)"
+                      <a href="https://www.instagram.com/dominioncityasaba/"
                         ><img src="assets/images/instagram.svg" alt="instagram"
                       /></a>
                     </li>
@@ -966,7 +966,7 @@ He is a Management and Government Consultant who speaks nationally and internati
   
               <li><a href="sermons.html">Sermons & Exhortations</a></li>
   
-              <li><a href="our-ministries.html">Our Ministries</a></li>
+              <li><a href="our-ministries.html">Satellite Churchs</a></li>
   
               <li><a href="events.html">Upcoming Events</a></li>
   
@@ -1034,7 +1034,7 @@ He is a Management and Government Consultant who speaks nationally and internati
   
             <ul class="social-medias">
   
-              <li><a href="assets/images/facebook.svg"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
+              <li><a href="https://www.facebook.com/DCasaba/"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
   
               <li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
   
