--- a/events.html
+++ b/events.html
@@ -142,7 +142,7 @@
 							<li><a href="about-us.html">About</a></li>
 	
 							<li>
-							  <a href="our-ministries.html">Our Ministries</a>
+							  <a href="our-ministries.html">Satellite Churchs</a>
 							</li>
 	
 							<!-- <li><a href="pastor-detail.html">Pastor Detail</a></li>
@@ -170,11 +170,11 @@
 						  <ul class="sub-menu">
 							<li><a href="events.html">Upcoming Events</a></li>
 	
-							<li><a href="event-detail.html">Event Details</a></li>
+							<!-- <li><a href="event-detail.html">Event Details</a></li> -->
 						  </ul>
 						</li>
 	
-						<li><a href="contact-us.html">Contact</a></li>
+						<li><a href="contact-us.html">Contact Us</a></li>
 					  </ul>
 					</div>
 	
@@ -217,7 +217,7 @@
 				<ul class="sub-menu">
 				  <li><a href="events.html">Upcoming Events</a></li>
 	
-				  <li><a href="event-detail.html">Event Details</a></li>
+				  <!-- <li><a href="event-detail.html">Event Details</a></li> -->
 				</ul>
 			  </li>
 	
@@ -236,7 +236,7 @@
 				  <!-- <li><a href="404.html">404 Page</a></li> -->
 				  <li><a href="about-us.html">About</a></li>
 	
-				  <li><a href="our-ministries.html">Our Ministries</a></li>
+				  <li><a href="our-ministries.html">Satellite Churchs</a></li>
 	
 				  <!-- <li><a href="pastor-detail.html">Pastor Detail</a></li> -->
 	
@@ -247,7 +247,7 @@
 				</ul>
 			  </li>
 	
-			  <li><a href="contact-us.html">Contact</a></li>
+			  <li><a href="contact-us.html">Contact Us</a></li>
 			</ul>
 	
 			<a href="JavaScript:void(0)" id="res-cross"></a>
@@ -612,7 +612,7 @@
 
 						<li><a href="sermons.html">Sermons & Exhortations</a></li>
 
-						<li><a href="our-ministries.html">Our Ministries</a></li>
+						<li><a href="our-ministries.html">Satellite Churchs</a></li>
 
 						<li><a href="events.html">Upcoming Events</a></li>
 
@@ -680,7 +680,7 @@
 
 					<ul class="social-medias">
 
-						<li><a href="assets/images/facebook.svg"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
+						<li><a href="https://www.facebook.com/DCasaba/"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
 
 						<li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
 
