--- a/our-ministries.html
+++ b/our-ministries.html
@@ -16,7 +16,7 @@
 
 	<!-- Title -->
 
-	<title>Our Ministries</title>
+	<title>Satellite Churchs</title>
 
 
 	<!-- Favicon -->
@@ -152,7 +152,7 @@
 							<li><a href="about-us.html">About</a></li>
 	
 							<li>
-							  <a href="our-ministries.html">Our Ministries</a>
+							  <a href="our-ministries.html">Sattelite Churchs</a>
 							</li>
 	
 							<!-- <li><a href="pastor-detail.html">Pastor Detail</a></li>
@@ -180,11 +180,11 @@
 						  <ul class="sub-menu">
 							<li><a href="events.html">Upcoming Events</a></li>
 	
-							<li><a href="event-detail.html">Event Details</a></li>
+							<!-- <li><a href="event-detail.html">Event Details</a></li> -->
 						  </ul>
 						</li>
 	
-						<li><a href="contact-us.html">Contact</a></li>
+						<li><a href="contact-us.html">Contact Us</a></li>
 					  </ul>
 					</div>
 	
@@ -227,7 +227,7 @@
 				<ul class="sub-menu">
 				  <li><a href="events.html">Upcoming Events</a></li>
 	
-				  <li><a href="event-detail.html">Event Details</a></li>
+				  <!-- <li><a href="event-detail.html">Event Details</a></li> -->
 				</ul>
 			  </li>
 	
@@ -246,7 +246,7 @@
 				  <!-- <li><a href="404.html">404 Page</a></li> -->
 				  <li><a href="about-us.html">About</a></li>
 	
-				  <li><a href="our-ministries.html">Our Ministries</a></li>
+				  <li><a href="our-ministries.html">Satellite Churchs</a></li>
 	
 				  <!-- <li><a href="pastor-detail.html">Pastor Detail</a></li> -->
 	
@@ -257,7 +257,7 @@
 				</ul>
 			  </li>
 	
-			  <li><a href="contact-us.html">Contact</a></li>
+			  <li><a href="contact-us.html">Contact Us</a></li>
 			</ul>
 	
 			<a href="JavaScript:void(0)" id="res-cross"></a>
@@ -601,7 +601,7 @@
 
 						<li><a href="sermons.html">Sermons & Exhortations</a></li>
 
-						<li><a href="our-ministries.html">Our Ministries</a></li>
+						<li><a href="our-ministries.html">Satellite Churchs</a></li>
 
 						<li><a href="events.html">Upcoming Events</a></li>
 
@@ -669,7 +669,7 @@
 
 					<ul class="social-medias">
 
-						<li><a href="assets/images/facebook.svg"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
+						<li><a href="https://www.facebook.com/DCasaba/"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
 
 						<li><a href="https://www.youtube.com/@dominioncityasabahq"><img src="assets/images/twitter.svg" alt="youtube"></a></li>
 
