--- a/our-ministries.html
+++ b/our-ministries.html
@@ -354,7 +354,7 @@
   <div  class="max-w-7xl mx-auto flex flex-col md:flex-row items-center">
     <div class="md:w-1/2">
       <h2 class="text-muted-foreground uppercase mb-2">Connect with us</h2>
-      <h1 class="text-4xl font-bold mb-4">Be a part of the family. Connect with a satellite church close to you!</h1>
+      <h1 class="text-4xl font-bold mb-4">Be a part of the family. Connect with a Satellite church close to you!</h1>
       <p class="text-muted-foreground mb-4">Use the information below to find a satellite church close to your location. We look forward to seeing you in one of our small groups!</p>
     </div>
     <div class="md:w-1/2 mt-4 md:mt-0 md:ml-8">
@@ -368,25 +368,66 @@
 	<thead>
 	  <tr>
 		<th scope="col">#</th>
-		<th scope="col">Sattelite Churchs and their details</th>
+		<th scope="col">Sattelite Churchs</th>
 		
 	  </tr>
 	</thead>
 	<tbody>
 	  <tr>
 		<th scope="row">1</th>
-		<td>Mark</td>
-		
+		<td>DC Summit</td>
 	  </tr>
 	  <tr>
 		<th scope="row">2</th>
-		<td>Jacob</td>
-		
+		<td>Commissioner’s Quarters</td>
 	  </tr>
 	  <tr>
 		<th scope="row">3</th>
-		<td>Larry the Bird</td>
-		
+		<td>DC Central</td>
+	  </tr>
+	  <tr>
+		<th scope="row">4</th>
+		<td>DDPA</td>
+	  </tr>
+	  <tr>
+		<th scope="row">5</th>
+		<td>In-Land Town</td>
+	  </tr>
+	  <tr>
+		<th scope="row">6</th>
+		<td>Cable</td>
+	  </tr>
+	  <tr>
+		<th scope="row">7</th>
+		<td>Stadium 1</td>
+	  </tr>
+	  <tr>
+		<th scope="row">8</th>
+		<td>Federal College of Education</td>
+	  </tr>
+	  <tr>
+		<th scope="row">9</th>
+		<td>Eagle’s Square</td>
+	  </tr>
+	  <tr>
+		<th scope="row">10</th>
+		<td>Marble Hill</td>
+	  </tr>
+	  <tr>
+		<th scope="row">11</th>
+		<td>Stadium 2</td>
+	  </tr>
+	  <tr>
+		<th scope="row">12</th>
+		<td>Ogwashi -Campus</td>
+	  </tr>
+	  <tr>
+		<th scope="row">13</th>
+		<td>School of Midwifery</td>
+	  </tr>
+	  <tr>
+		<th scope="row">14</th>
+		<td>Dennis Osadebe Campus</td>
 	  </tr>
 	</tbody>
   </table>
@@ -417,19 +458,277 @@
 	<tbody>
 	  <tr>
 		<th scope="row">1</th>
-		<td>Mark</td>
+		<td>The Throne Room	Eagle Square, Located at Okpanam Road, Cell leader: Ijeoma Onwuegbusi, Cell leaders number:  <a href="tel:+2347030769959"><span class=""></span> 07030769959</a>
+		</td>
 		
 	  </tr>
 	  <tr>
 		<th scope="row">2</th>
-		<td>Jacob</td>
+		<td>Hilltop Home Care
+			Fellowship, Located at Onwochei Street Behind
+			Marble Hill School, Okpanam Cell leader: Greatpaul Okonkwo Cell leaders number:  <a href="tel:+2347063591187"><span class=""></span> 07063591187</a>
+			</td>
 		
 	  </tr>
 	  <tr>
 		<th scope="row">3</th>
-		<td>Larry the Bird</td>
+		<td>Light House of Testimonies, Located at No. 1 Madonna Way, Directly Opposit Dell School, Behind
+			NTA, Cell leader: Happiness Amakor, Cell leaders number:  <a href="tel:+2348030748876"><span class=""></span> 08030748876</a>
+			</td>
 		
 	  </tr>
+	  <tr>
+		<th scope="row">4</th>
+		<td>Delight Cell Fellowship, Located at Hampton Hotel and Play Learn axis, Cell leader: Chinedu Gospel
+			Nwadighoha, Cell leaders number:  <a href="tel:+2348137584682"><span class=""></span>08137584682</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">5</th>
+		<td>House of Mercy Cell
+			Fellowship, Located at Behind Madonna College, Cell leader: Anene Mercy, Cell leaders number:  <a href="tel:+2348137490981"><span class="08137490981"></span></a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">6</th>
+		<td>Reformers Home Care
+			Fellowship, Located at Corper's Lodge, Cell leader: Ndubuisi Omah, Cell leaders number:  <a href="tel:+2349022744531"><span class=""></span>09022744531</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">7</th>
+		<td>Light Home Care, Located at Jude Okafor Street, Redeem Road, Cell leader: Okomitete Oghenefegiro, Cell leaders number:  <a href="tel:+2347035322498"><span class=""></span>07035322498</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">8</th>
+		<td>God's Grace, Located at 9, Tony Aki Street Behind
+			Cornerstone School, Okpanam
+			Road, Asaba., Cell leader: Deborah Robert, Cell leaders number:  <a href="tel:+2347030202268"><span class=""></span>07030202268</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">9</th>
+		<td>Excellent God, Located at Dominion School, Behind New
+			General Hospital, Cell leader: Francis Etop, Cell leaders number:  <a href="tel:+2348111320057"><span class=""></span>08111320057</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">10</th>
+		<td>Favor Home Cell, Located at Olive Relief by Marble Hill, Cell leader: Okwunweze Tracy, Cell leaders number:  <a href="tel:+2347038979293"><span class=""></span>07038979293</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">11</th>
+		<td>Inner Court, Located at No. 6, Eze Obi Ojukwu Street
+			by Marble Hills Junction, Okpanam Road, Cell leader: Ononiwu
+			Chukwuemeka
+			Michael, Cell leaders number:  <a href="tel:+2348102316839"><span class=""></span>08102316839</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">12</th>
+		<td>Lights House of Favor, Located at 26b, Madonna Road, Back of
+			NTA, Cell leader: Amaka Aniakor, Cell leaders number:  <a href="tel:+2347064416829"><span class=""></span>07064416829</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">13</th>
+		<td>Community Hostel Cell, Located at Community Hostel (Royalty
+			Hostel), Cell leader: Ehis Hope, Cell leaders number:  <a href="tel:+2347034367090"><span class=""></span>07034367090</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">14</th>
+		<td>Love Arena, Located at Behind New General Hospital, Cell leader: Chuks Ashikordi, Cell leaders number:  <a href="tel:+2348037812295"><span class=""></span>08037812295</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">15</th>
+		<td>Light of Benefits, Located at No. 21 Amaka/ Uche Street,
+			Behind NTA, Cell leader: Barile Bue-Ere N, Cell leaders number:  <a href="tel:+2348035056374"><span class=""></span>08035056374</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">16</th>
+		<td>Beauty Hostel Cell, Located at Midwifery, Beauty Hostel, Cell leader: Ndudi Gift Ifeyinwa, Cell leaders number:  <a href="tel:+2348135376059"><span class=""></span>08135376059</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">17</th>
+		<td>God's Presence, Located at Okpanam Road By Golden
+			Land Hotel Area, Cell leader: Blessing Nwaokocha, Cell leaders number:  <a href="tel:+2348024442590"><span class=""></span>08024442590</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">18</th>
+		<td>Midwifery School
+			Cell (Peace Hostel), Located at Peace Hostel, Cell leader: Madukwe Nkiruka
+			Anita, Cell leaders number:  <a href="tel:+2348060499588"><span class=""></span>08060499588</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">19</th>
+		<td>Sapphire Hostel, Located at Midwifery School, Cell leader: Obayuwana Marvelous, Cell leaders number:  <a href="tel:+2348138992908"><span class=""></span>08138992908</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">20</th>
+		<td>Joseph House, Located at No 5 Chiyerem Evans Street,
+			Amachai, Cell leader: Mbam Evelyn, Cell leaders number:  <a href="tel:+2347049360257"><span class=""></span>07049360257</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">21</th>
+		<td>Bethel, Located at Behind Favor Block Industry,
+			New Era, Cell leader: Goodnews Eyibio
+			Mbuk, Cell leaders number:  <a href="tel:+2349072184494"><span class=""></span>09072184494</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">22</th>
+		<td>Zion's Hill, Located at No. 4, Orobosa Close, Opposite Goodnews School, Off Nwawolor Market, Cell leader: Mr. O.G, Cell leaders number:  <a href="tel:+2348034848074"><span class=""></span>08034848074</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">23</th>
+		<td>Light House of Dominion, Located at Behind Nwawolor Market, Cell leader: Kelechi Zack-Dede, Cell leaders number:  <a href="tel:+2347081202849"><span class=""></span>07081202849</a>
+			</td>
+		
+	  </tr>	  
+	  <tr>
+		<th scope="row">24</th>
+		<td>House of Rehoboth 1, Located at No. 20, Joseph Ashiedu Street, Amachai, (Old Jordan, BeforeGoodnews School), Cell leader: Uzechina Samuel, Cell leaders number:  <a href="tel:+2348064907227"><span class=""></span>08064907227</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">25</th>
+		<td>House of Rehoboth 2, Located at Opposite Duel-Pet FillingStation, Stop Over Junction, Ibusa Road, Asaba, Cell leader: Christian Ezeagwa, Cell leaders number:  <a href="tel:+2347032316443"><span class=""></span>07032316443</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">26</th>
+		<td>House of Rehoboth 3, Located at No 2 Vincent Okobi Street,Beside Art & Culture, Former Deputy Area, Asaba, Cell leader: Udo Anointed Monday, Cell leaders number:  <a href="tel:+2347043388157"><span class=""></span>07043388157</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">27</th>
+		<td>House of Rehoboth 4, Located at Achala Ibusa Area, After
+			Afolabi, Cell leader: Mrs Edith Uzodimma, Cell leaders number:  <a href="tel:+2348061534300"><span class=""></span>08061534300</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">28</th>
+		<td>House of Rehoboth 5, Located at A' Division Plaza, Cell leader: Jackson Gift Dawu, Cell leaders number:  <a href="tel:+2348037506853"><span class=""></span>08037506853</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">29</th>
+		<td>Springs of Life Cell, Located at Okpanam City Gate, Cell leader: Grace Olaniran, Cell leaders number:  <a href="tel:+2347025051633"><span class=""></span>07025051633</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">30</th>
+		<td>Emerald Light House, Located at 9, Benton Opene Drive,Bonsaac, Cell leader: Harrison Agbonviri, Cell leaders number:  <a href="tel:+2348032763740"><span class=""></span>08032763740</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">31</th>
+		<td>Light House Of Convenant, Located Across Summit, Cell leader: Nwosu Precious, Cell leaders number:  <a href="tel:+2349025591470"><span class=""></span>09025591470</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">32</th>
+		<td>Good News Cell, Located at 75, Old Anwia Road, Cell leader: Engr. Dafe Edafeghwara, Cell leaders number:  <a href="tel:+2348037750286"><span class=""></span>08037750286</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">33</th>
+		<td>Graceland, Located at 74 AXIS, Cell leader: Ayuba Isaac, Cell leaders number:  <a href="tel:+2347069603571"><span class=""></span>07069603571</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">34</th>
+		<td>Dominion Home Care
+			Fellowship, Located at Infant Jesus, Cell leader: Joseph Faith, Cell leaders number:  <a href="tel:+2348137216483"><span class=""></span>08137216483</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">35</th>
+		<td>Amazing Home Cell, Located at Airport View, Cell leader: Chris Omon Anetor, Cell leaders number:  <a href="tel:+2348061266822"><span class=""></span>08061266822</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">36</th>
+		<td>Home Cell Of Excellence, Located at Agric Road, Off Nnebisi Road, Cell leader: Noble, Cell leaders number:  <a href="tel:+2348035242200"><span class=""></span>08035242200</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">37</th>
+		<td>Faith Dome, Located at Opp. Crown FM, Off Konwea, Cell leader: Ebuka Igboechi, Cell leaders number:  <a href="tel:+2347063733645"><span class=""></span>07063733645</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">38</th>
+		<td>Jesus House, Located at Plaza
+			Stadium Umuagu, Cell leader: Ruth Onos Aroh, Cell leaders number:  <a href="tel:+2348063726122"><span class=""></span>08063726122</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">39</th>
+		<td>David's Court, Located at Agric Road, Behind Access Bank, Cell leader: Medonald
+			Okechukwu, Cell leaders number:  <a href="tel:+2348037534317"><span class=""></span>08037534317</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">40</th>
+		<td>God’s Heart Beat, Located at F.M.C, Cell leader: Mariam, Cell leaders number:  <a href="tel:+2349013100662"><span class=""></span>09013100662</a>
+			</td>
+		
+	  </tr>
+	  <tr>
+		<th scope="row">41</th>
+		<td>Jubilee House Care, Located at 9, Uzo Iyamah Street, Behind Five Star Restaurant, Okpanam Road, Cell leader: Dorothy Umeana, Cell leaders number:  <a href="tel:+2347032789275"><span class=""></span>07032789275</a>
+			</td>
+		
+	  </tr>
+
+
 	</tbody>
   </table>
 	<!-- Our Ministries End -->
@@ -456,7 +755,7 @@
 
 				</li>
 
-				<li class="flex-all">
+				<!-- <li class="flex-all">
 
 					<a href="https://www.youtube.com/@dominioncityasabahq" class="flex-all rounded-circle">
 
@@ -466,7 +765,7 @@
 
 					<p class="font-bold">Subscribe on Youtube</p>
 
-				</li>
+				</li> -->
 
 				<li class="flex-all">
 
