--- a/about-us.html
+++ b/about-us.html
@@ -661,7 +661,7 @@ He is a Management and Government Consultant who speaks nationally and internati
       </div>
 
       
-        <img id="firstImg" src="./assets/images/background.png"
+        <img id="firstImg" src="./assets/images/background.webp"
         alt="Church Image">
       
     </div>
