Changes to main

--- a/index.html
+++ b/index.html
@@ -323,8 +323,7 @@
     <section class="gap fellowship">
       <div class="container">
         <h2 class="text-center mx-auto">
-          We Gather for Inspiration, Fellowship, and Guidance in the of
-          Christian Discipleship.
+          We Gather for Inspiration, Fellowship, and Guidance in Christian Discipleship.
         </h2>
 
         <div class="row">
