--- a/genx.html
+++ b/genx.html
@@ -791,7 +791,7 @@
         </div>
 
        <div class="live">
-			<iframe src="https://www.youtube.com/embed/xD-Zughcm64?autoplay=1&modestbranding=1" width="900" height="515" title="Dominion CITY Asaba Live Stream" frameborder="0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/U4FrZSmbWIw?autoplay=1&modestbranding=1" width="900" height="515" title="Dominion CITY Asaba Live Stream" frameborder="0" allowfullscreen></iframe>
 
 			
 		</div>
