--- a/pastor-detail.html
+++ b/pastor-detail.html
@@ -492,7 +492,7 @@
 
 					</a>
 
-					<p class="text-white">Dominion City Mega Auditorium, off NTA Road, Behind New State, Asaba, Delta State, Nigeria</p>
+					<p class="text-white">Dominion City Mega Auditorium, off NTA Road, Behind New State Secretariat, Asaba, Delta State, Nigeria</p>
 
 					<div class="footer-contact">
 
