Added Give Details

--- a/donation-page.html
+++ b/donation-page.html
@@ -356,10 +356,90 @@
 	<!-- Banner End -->
 
 
+	<div class="give-section">
+        <div class="give-content">
+            <h1>GIVE</h1>
+            <p>
+                God remains faithful to His word, creating opportunities for us to set our faith to work. 
+                Our show of gratitude to God for redeeming us out of the world, and for substituting His 
+                Son for our sake is exemplified through our continued giving. We make our offering as a 
+                physical show of our thanksgiving, providing proof of our faith and yielding to His leading.
+            </p>
+            
+        </div>
+    </div>
+<div>
+	<p class="subtext">Please give using any of the accounts below</p>
+	<div class="myhrcentered">
+		<div class="myhr3">
+		</div>
+	</div>
+	
+</div>
 
+
+<div id="soloCon" class="container">
+	<div class="accounts-info">
+		<h2>ACCOUNTS INFORMATION</h2>
+		<div class="myhr2">
+		</div>
+		<div class="account-item">
+			<h3>TITHE & OFFERING</h3>
+			<p>Account name: <strong>Dominion City</strong></p>
+			<p>Account number: <strong>002 623 7112</strong></p>
+			<p>Bank: <strong>Access Bank</strong></p>
+		</div>
+		<div class="account-item">
+			<h3>BUILDING OFFERING</h3>
+			<p>Account name: <strong>Dominion City Asaba</strong></p>
+			<p>Account number: <strong>012 387 3096</strong></p>
+			<p>Bank: <strong>Guaranty Trust Bank</strong></p>
+		</div>
+		<div class="account-item">
+			<h3>PROJECT</h3>
+			<p>Account name: <strong>Dominion City Asaba</strong></p>
+			<p>Account number: <strong>012 387 3096</strong></p>
+			<p>Bank: <strong>Guaranty Trust Bank</strong></p>
+		</div>
+		 
+		<!--
+		<div class="account-item">
+			<h3>WELFARE & MEMBERSHIP SUPPORT</h3>
+			<p>Account name: <strong>Dominion City Lagos HQ Welfare/Membership Support</strong></p>
+			<p>Account number: <strong>101 436 2520</strong></p>
+			<p>Bank: <strong>Zenith Bank</strong></p>
+		</div>
+		<div class="account-item">
+			<h3>MISSIONS/CHURCH PLANTING</h3>
+			<p>Account name: <strong>Dominion City Lagos HQ Missions/Church Planting</strong></p>
+			<p>Account number: <strong>121 341 3517</strong></p>
+			<p>Bank: <strong>Zenith Bank</strong></p>
+		</div> -->
+	</div>
+
+	<div class="special-accounts">
+		<h2>SPECIAL ACCOUNTS</h2>
+		<div class="myhr">
+		</div>
+		<div id="account-item" class="account-item">
+			
+			<!-- <p>Account name: <strong>ENYIOMS</strong></p>
+			<p>Account number: <strong>507 059 2213</strong></p>
+			<p>Bank: <strong>Zenith Bank</strong></p>
+			<p>Sort Code: <strong>18 50 08</strong></p>
+			<p>Swift: <strong>ZEIBNGLA</strong></p> -->
+		</div>
+		<div id="account-item" class="account-item">
+			<h3>PROPHET HONOUR</h3>
+			<p>Account name: <strong>ONWUCHEKWA ENYIOMA</strong></p>
+			<p>Account number: <strong>003 939 7219</strong></p>
+			<p>Bank: <strong>Guaranty Trust Bank</strong></p>
+		</div>
+	</div>
+</div>
 	<!-- Donation Page Start -->
 
-	<section class="gap donation-page">
+	<!-- <section class="gap donation-page">
 
 		<div class="container">
 			<div class="row bg-grey">
@@ -551,7 +631,7 @@
 			</div>
 		</div>
 
-	</section>
+	</section> -->
 
 	<!-- Donation Page End -->
 
