--- a/maineventpage.html
+++ b/maineventpage.html
@@ -162,7 +162,7 @@
 				  <li>
 				  <a href="our-ministries.html">Satellite Churchs</a>
 				  </li>
-				  <li><a href="genx.html">Generation Next</a></li>
+				  <li><a href="404.html">Generation Next</a></li>
 				  <li><a href="donation-page.html">Donate Now</a></li>
 				  
 				  <!-- <li><a href="pastor-detail.html">Pastor Detail</a></li>
@@ -190,21 +190,11 @@
 				<ul class="sub-menu">
 				  <li><a href="events.html">Upcoming Events</a></li>
 				  <li><a href="maineventpage.html">Programs</a></li>
-	  
 				  <!-- <li><a href="event-detail.html">Event Details</a></li> -->
 				</ul>
 				</li>
 	  
-				<li class="menu-item-has-children">
-				<a href="JavaScript:void(0)">Dominion City Schools</a>
-	  
-				<ul class="sub-menu">
-				  <li><a href="dca.html">Dominion City Academy</a></li>
-				  <li><a href="dli.html">Dominion Leadership Institute</a></li>
-	  
-				  <!-- <li><a href="event-detail.html">Event Details</a></li> -->
-				</ul>
-				</li>
+				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
 				<li><a href="neweve.html">New Eve</a></li>
@@ -256,16 +246,7 @@
 			<!-- <li><a href="event-detail.html">Event Details</a></li> -->
 			</ul>
 		  </li>
-		  <li class="menu-item-has-children">
-			<a href="JavaScript:void(0)">Dominion City Schools</a>
-	  
-			<ul class="sub-menu">
-			<li><a href="events.html">Dominion City Academy</a></li>
-			<li><a href="events.html">Dominion Leadership Institute</a></li>
-	  
-			<!-- <li><a href="event-detail.html">Event Details</a></li> -->
-			</ul>
-		  </li>
+		  <li class="menu-item-has-children"><a href="schools.html">Dominion City Schools</a></li>
 	  
 		  <li class="menu-item-has-children">
 			<a href="JavaScript:void(0)">Pages</a>
@@ -282,7 +263,7 @@
 			<!-- <li><a href="404.html">404 Page</a></li> -->
 			<li><a href="about-us.html">About</a></li>
 			<li><a href="our-ministries.html">Satellite Churchs</a></li>
-			<li><a href="genx.html">Generation Next</a></li>
+			<li><a href="404.html">Generation Next</a></li>
 			<li><a href="donation-page.html">Donate Now</a></li>
 			<!-- <li><a href="our-ministries.html">Our Ministries</a></li> -->
 	  
