--- a/neweve.html
+++ b/neweve.html
@@ -694,133 +694,9 @@
     <!-- Digital Ministry End -->
 
     <!-- Live Stream Start -->
-	<div class="row">
 
-		
-
-	</div>
-      <div class="container">
-        <div class="heading">
-          <img
-            class="dcLogo2"
-            src="assets/images/heading-img.webp"
-            alt="Heading Image 5"
-          />
-
-          
-
-          <h2>Recent Articles</h2>
-        </div>
-
-        <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div
-              class="blog-meta"
-              data-aos="fade-up"
-              data-aos-delay="400"
-              data-aos-duration="600"
-            >
-              <figure>
-                <img
-                  class="img-fluid"
-                  src="assets/images/blog-img.webp"
-                  alt="Blog image 1"
-                />
-              </figure>
-
-              <ul>
-                <li class="date">21 Dec, 2021</li>
-
-                <li>
-                  <img src="assets/images/message.svg" alt="Message 1" />12
-                </li>
-              </ul>
-
-              <a href="blog-detail.html" class="font-bold"
-                >Public Health By Allowing California Order</a
-              >
-
-              <p>
-                Alienum phaedrum toquatoeu, vis detraxit iculis eiex petenis in
-                mei Mei an peri sl gra an peri sl graecis vix apernihil.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div
-              class="blog-meta"
-              data-aos="fade-up"
-              data-aos-delay="500"
-              data-aos-duration="900"
-            >
-              <figure>
-                <img
-                  class="img-fluid"
-                  src="assets/images/blog-img-2.webp"
-                  alt="Blog image 2"
-                />
-              </figure>
-
-              <ul>
-                <li class="date">21 Dec, 2021</li>
-
-                <li>
-                  <img src="assets/images/message.svg" alt="Message 2" />12
-                </li>
-              </ul>
-
-              <a href="blog-detail.html" class="font-bold"
-                >Public Health By Allowing California Order</a
-              >
-
-              <p>
-                Alienum phaedrum toquatoeu, vis detraxit iculis eiex petenis in
-                mei Mei an peri sl gra an peri sl graecis vix apernihil.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div
-              class="blog-meta"
-              data-aos="fade-up"
-              data-aos-delay="700"
-              data-aos-duration="1000"
-            >
-              <figure>
-                <img
-                  class="img-fluid"
-                  src="assets/images/blog-img-3.webp"
-                  alt="Blog image 3"
-                />
-              </figure>
-
-              <ul>
-                <li class="date">21 Dec, 2021</li>
-
-                <li>
-                  <img src="assets/images/message.svg" alt="Message 3" />12
-                </li>
-              </ul>
-
-              <a href="blog-detail.html" class="font-bold"
-                >Public Health By Allowing California Order</a
-              >
-
-              <p>
-                Alienum phaedrum toquatoeu, vis detraxit iculis eiex petenis in
-                mei Mei an peri sl gra an peri sl graecis vix apernihil.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="d-flex justify-content-center loadmore">
-          <a href="blog.html" class="theme-btn">View All Posts</a>
-        </div>
-      </div>
-    </section> -->
+      
+    </section>
 
     <!-- Blog End -->
 
